[project]
name = "knodes"
description = "Nodes: Image(s) To Websocket (Base64), Load Image (Base64),Load Images (Base64)"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/kft334/Knodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Knodes"
Icon = ""
